--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SBS-DWV109\\MSSQLSERVER01;Database=AspNetCore;Trusted_Connection=True;MultipleActiveResultSets=true"
+   // "DefaultConnection": "Server=SBS-DWV109\\MSSQLSERVER01;Database=AspNetCore;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=tcp:aspnetcoredbserver.database.windows.net,1433;Initial Catalog=AspNetCore_db;Persist Security Info=False;User ID=adminuser;Password=India2020!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
